--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
         </div>
     </div>
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h2>Made with ❤️️ by Huseyin for Horiseon</h2>
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+            &copy; 2024 Horiseon Social Solution Services, Inc.
         </p>
     </div>
 </body>
