--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="en-gb">
 
 <head>
+    <!-- Meta tags for responsiveness and SEO -->
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./style/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Horiseon offers integrated digital marketing solutions focused on SEO, reputation management, and social media strategy to enhance your online presence and impact.">
+    <meta name="description"
+        content="Horiseon offers integrated digital marketing solutions focused on SEO, reputation management, and social media strategy to enhance your online presence and impact.">
     <title>Horiseon: Boosting Online Impact | SEO and Online Reputation Services</title>
+    <!-- Link to the external CSS file -->
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
-    <!-- Header of the page, contains site title and navigation -->
+    <!-- Page header with site title and navigation -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- Navigation bar with links to different sections of the page -->
         <nav>
             <ul>
                 <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
@@ -21,80 +25,80 @@
             </ul>
         </nav>
     </header>
-    <!-- Main content of the page -->
+
+    <!-- Main content area -->
     <main>
-        <!-- Decorative background image -->
+        <!-- Background image -->
         <div class="background-image"></div>
 
-        <!-- Article content for SEO, ORM, and SMM topics -->
+        <!-- Sections detailing services offered by Horiseon -->
         <article class="content">
-            <section class="search-engine-optimization">
-                <img src="./images/search-engine-optimization.jpg" alt="SEO planning with notepad, analytics graphs, and a cup of coffee on the desk" class="float-left" />
+            <!-- SEO section with relevant image and description -->
+            <section class="info-section search-engine-optimization">
+                <img src="./images/search-engine-optimization.jpg"
+                    alt="SEO planning with notepad, analytics graphs, and a cup of coffee on the desk"
+                    class="float-left" />
                 <h2>Search Engine Optimization</h2>
-                <p>
-                    The dominance of mobile internet use means that users are searching for the right business as they
+                <p>The dominance of mobile internet use means that users are searching for the right business as they
                     travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
-                    your visibility and find the right customers for your business.
-                </p>
+                    your visibility and find the right customers for your business.</p>
             </section>
-            <section id="online-reputation-management" class="online-reputation-management">
-                <img src="./images/online-reputation-management.jpg" alt="Marketing professional analyzing online reputation metrics on a laptop" class="float-right" />
+
+            <!-- ORM section with relevant image and description -->
+            <section id="online-reputation-management" class="info-section online-reputation-management">
+                <img src="./images/online-reputation-management.jpg"
+                    alt="Marketing professional analyzing online reputation metrics on a laptop" class="float-right" />
                 <h2>Online Reputation Management</h2>
-                <p>
-                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an
                     internet connection to say whatever they want about your business. Online Reputation Management
-                    gives
-                    you the control over what potential customers see when they search for your business.
-                </p>
+                    gives you the control over what potential customers see when they search for your business.</p>
             </section>
-            <section id="social-media-marketing" class="social-media-marketing">
-                <img src="./images/social-media-marketing.jpg" alt="Overhead view of a social media strategy session with icons and mobile devices" class="float-left" />
+
+            <!-- SMM section with relevant image and description -->
+            <section id="social-media-marketing" class="info-section social-media-marketing">
+                <img src="./images/social-media-marketing.jpg"
+                    alt="Overhead view of a social media strategy session with icons and mobile devices"
+                    class="float-left" />
                 <h2>Social Media Marketing</h2>
-                <p>
-                    Social media continues to have a sizable influence on buying habits. Social media marketing helps
-                    you
+                <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you
                     determine which platforms are suited to your brand, using analytics to find the right markets and
-                    increase your lead generation.
-                </p>
+                    increase your lead generation.</p>
             </section>
         </article>
 
-        <!-- Sidebar for additional information -->
+        <!-- Sidebar for additional information on benefits -->
         <aside class="benefits">
-            <section class="benefit-lead">
+            <!-- Lead generation section -->
+            <section class="benefit benefit-lead">
                 <h3>Lead Generation</h3>
-                <img src="./images/lead-generation.png" alt="Icon representing lead generation"/>
-                <p>
-                    Inbound strategies for lead generation require less work for your business, bringing customers
-                    directly
-                    to your website.
-                </p>
+                <img src="./images/lead-generation.png" alt="Icon representing lead generation" />
+                <p>Inbound strategies for lead generation require less work for your business, bringing customers
+                    directly to your website.</p>
             </section>
-            <section class="benefit-brand">
+
+            <!-- Brand awareness section -->
+            <section class="benefit benefit-brand">
                 <h3>Brand Awareness</h3>
                 <img src="./images/brand-awareness.png" alt="Icon representing brand awareness" />
-                <p>
-                    Users find your business through paid and organic searches, increasing the search ranking and
-                    visibility
-                    for your business.
-                </p>
+                <p>Users find your business through paid and organic searches, increasing the search ranking and
+                    visibility for your business.</p>
             </section>
-            <section class="benefit-cost">
+
+            <!-- Cost management section -->
+            <section class="benefit benefit-cost">
                 <h3>Cost Management</h3>
-                <img src="./images/cost-management.png" alt="Icon representing cost management"></img>
-                <p>
-                    As the search ranking for your business increases, your advertising costs decrease, and you no
-                    longer
-                    need to advertise your page.
-                </p>
+                <img src="./images/cost-management.png" alt="Icon representing cost management" />
+                <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                    need to advertise your page.</p>
             </section>
         </aside>
     </main>
 
-    <!-- Footer of the page -->
+    <!-- Footer with copyright and credits -->
     <footer class="footer">
-        <h2>Made with ❤️️ by Huseyin for Horiseon</h2>
+        <h2>Made with ❤️️ for Horiseon</h2>
         <p>&copy; 2024 Horiseon Social Solution Services, Inc.</p>
     </footer>
 </body>
+
 </html>
