fix broken link, updated readme

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- Sections detailing services offered by Horiseon -->
         <article class="content">
             <!-- SEO section with relevant image and description -->
-            <section class="info-section search-engine-optimization">
+            <section id="search-engine-optimization" class="info-section search-engine-optimization">
                 <img src="./images/search-engine-optimization.jpg"
                     alt="SEO planning with notepad, analytics graphs, and a cup of coffee on the desk"
                     class="float-left" />
