add link to header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
     <!-- Page header with site title and navigation -->
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1><a href="https://6nhuseyin.github.io/horiseon/" class="header-link">Hori<span class="seo">seo</span>n</a>
+        </h1>
+
         <!-- Navigation bar with links to different sections of the page -->
         <nav>
             <ul>
